Agentforce/force-app/main/default/objects/Lead/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Aviation Services</fullName>
            </value>
            <value>
                <fullName>Cabling &amp; Networking</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Energy Management</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Front of House &amp; Concierge</fullName>
            </value>
            <value>
                <fullName>Industrial Processes</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>M&amp;E Frameworks</fullName>
            </value>
            <value>
                <fullName>M&amp;E Projects</fullName>
            </value>
            <value>
                <fullName>Mail Management</fullName>
            </value>
            <value>
                <fullName>Management Services</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Bundled Soft Services</fullName>
            </value>
            <value>
                <fullName>Space Management</fullName>
            </value>
            <value>
                <fullName>Window Cleaning</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Total Facilities Management</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>