Agentforce/force-app/main/default/objects/Lead/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <formula>SIC_Code__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Description</label>
    <type>Text</type>
</CustomField>