Agentforce/force-app/main/default/objects/Lead/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <description>Sub-sector aligned to Sector</description>
    <label>Sub-Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Sector</valueSetName>
    </valueSet>
</CustomField>