Agentforce/force-app/main/default/objects/Lead/fields/System_Auto_Convert_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>System_Auto_Convert_to_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to be used as a trigger for Lead: After Create and Update flow to convert the Lead to a Contact.

Used by Pardot (B2BMA Integration User).</description>
    <label>System: Auto-Convert to Contact</label>
    <type>Checkbox</type>
</CustomField>