Agentforce/force-app/main/default/objects/Lead/fields/System_Days_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>System_Days_Since_Last_Update__c</fullName>
    <description>No of Days since Last Update</description>
    <formula>TODAY() - Next_Update_Due_f__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System: Days Since Last Update</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>