Agentforce/force-app/main/default/objects/Lead/fields/System_Days_Since_Last_User_Interaction__c.field-meta.xml
<CustomField>
    <fullName>System_Days_Since_Last_User_Interaction__c</fullName>
    <description>Used as criteria in Scheduled Flow for notifications of stalled Leads</description>
    <formula>TODAY() -  Last_User_Interaction_Date__c</formula>
    <label>System: Days Since Last User Interaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>