Agentforce/force-app/main/default/objects/Lead/fields/System_Lead_Owner_Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>System_Lead_Owner_Managers_Email__c</fullName>
    <defaultValue>$User.Manager_Email__c</defaultValue>
    <description>Lead Owners Managers Email</description>
    <label>System: Lead Owner Managers Email</label>
    <type>Email</type>
</CustomField>