Agentforce/force-app/main/default/objects/Lead/fields/System_Originating_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Originating_Account_Id__c</fullName>
    <label>System: Originating Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>