Agentforce/force-app/main/default/objects/Lead/fields/TH_Consent_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>TH_Consent_Email_Sent_Date__c</fullName>
    <description>AD-409 - Tracks the date in which the consent email has been sent (For Thailand Only)</description>
    <label>TH Consent Email Sent Date</label>
    <type>Date</type>
</CustomField>