Agentforce/force-app/main/default/objects/Lead/fields/TH_Consent_Requested__c.field-meta.xml
<CustomField>
    <fullName>TH_Consent_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-409 - Track whether or not we have requested consent</description>
    <label>TH Consent Requested</label>
    <type>Checkbox</type>
</CustomField>