Agentforce/force-app/main/default/objects/Lead/fields/TH_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>TH_Consent_Status__c</fullName>
    <description>AD-409 - Tracks the current status of the TH consent process for this Lead</description>
    <label>TH Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent Requested</fullName>
            </value>
            <value>
                <fullName>Opted In</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>