Agentforce/force-app/main/default/objects/Lead/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-109 - checkbox to be used in the BANT validation</description>
    <inlineHelpText>We understand the timeline in play, when the customer needs the work to be completed and when decisions will be made.</inlineHelpText>
    <label>Timeline</label>
    <type>Checkbox</type>
</CustomField>