Agentforce/force-app/main/default/objects/Lead/fields/Trading_Style__c.field-meta.xml
<CustomField>
    <fullName>Trading_Style__c</fullName>
    <description>Trading Style- Data Dictionary Consolidation</description>
    <label>Trading Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>