Agentforce/force-app/main/default/objects/Lead/fields/UK_TPS_Registered_Phone__c.field-meta.xml
<CustomField>
    <fullName>UK_TPS_Registered_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UK TPS Registered Phone</label>
    <type>Checkbox</type>
</CustomField>