Agentforce/force-app/main/default/objects/Lead/fields/Web_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Web_to_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Web to Lead- Data Dictionary Consolidation</description>
    <label>Web to Lead</label>
    <type>Checkbox</type>
</CustomField>