Agentforce/force-app/main/default/objects/Lead/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <description>Year Founded- Data Dictionary Consolidation</description>
    <label>Year Founded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>