Agentforce/force-app/main/default/objects/Lead/validationRules/BANT_Qualification.validationRule-meta.xml
<ValidationRule>
    <fullName>BANT_Qualification</fullName>
    <active>false</active>
    <description>AD-109 - validation rule to ensure BANT has been qualified before converting a lead</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
    IsConverted,
    OR(
        NOT(Budget__c),
        NOT(Authority__c),
        NOT(Need__c),
        NOT(Timeline__c)
    )
)</errorConditionFormula>
    <errorMessage>BANT Qualification must be completed</errorMessage>
</ValidationRule>