Agentforce/force-app/main/default/objects/Lead/validationRules/Closed_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Detail_Required</fullName>
    <active>true</active>
    <description>Closed Details required when a Lead is Closed</description>
    <errorConditionFormula>AND
(! $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c, 
(AND
(
    ISPICKVAL(Status, &apos;Closed&apos;),
    ISBLANK(Closure_Details__c)
))
)</errorConditionFormula>
    <errorDisplayField>Closure_Details__c</errorDisplayField>
    <errorMessage>Please provide further details for closure</errorMessage>
</ValidationRule>