Agentforce/force-app/main/default/objects/Lead/validationRules/Closed_Reason_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Reason_Populated</fullName>
    <active>true</active>
    <description>AD-23 - validation to ensure Closed Reason is populated when a Lead is Closed</description>
    <errorConditionFormula>AND(
    NOT($Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c),
    ISPICKVAL(Status, &apos;Closed&apos;), 
    ISBLANK(TEXT(Closed_Reason__c)) 
)</errorConditionFormula>
    <errorDisplayField>Closed_Reason__c</errorDisplayField>
    <errorMessage>You must provide a reason for closure</errorMessage>
</ValidationRule>