Agentforce/force-app/main/default/objects/Lead/validationRules/Company_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_required</fullName>
    <active>true</active>
    <description>Ensures the Company Name is populated</description>
    <errorConditionFormula>AND(
$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
OR(
				ISBLANK(Company),
    LEN(Company) &lt;= 2)
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>Company Name is required</errorMessage>
</ValidationRule>