Agentforce/force-app/main/default/objects/Lead/validationRules/Correct_email_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_email_format</fullName>
    <active>true</active>
    <description>AD-33 Ensures the correct email format is used</description>
    <errorConditionFormula>AND(
NOT
($Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c),
NOT(ISBLANK(Email)),
NOT(REGEX(Email, &quot;[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please enter a valid email address</errorMessage>
</ValidationRule>