Agentforce/force-app/main/default/objects/Lead/validationRules/Correct_number_of_sites.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_number_of_sites</fullName>
    <active>true</active>
    <description>AD- 29 Ensures the Company Name is populated</description>
    <errorConditionFormula>AND(  
NOT
($Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c),
NOT(ISNULL(NumberOfSites__c)), 
NumberOfSites__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>NumberOfSites__c</errorDisplayField>
    <errorMessage>Please input the correct number of sites</errorMessage>
</ValidationRule>