Agentforce/force-app/main/default/objects/Lead/validationRules/Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required</fullName>
    <active>true</active>
    <description>Company Address Country is required</description>
    <errorConditionFormula>AND(
NOT($Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c), 
ISBLANK(Country)
)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please select the Country where the lead is located.</errorMessage>
</ValidationRule>