Agentforce/force-app/main/default/objects/Lead/validationRules/First_Name_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Length</fullName>
    <active>true</active>
    <description>AD-26 - validation rule to ensure the first name does not exceed 80 characters</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
 LEN( FirstName ) &gt; 80)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>The lead&apos;s first name should not exceed 80 characters</errorMessage>
</ValidationRule>