Agentforce/force-app/main/default/objects/Lead/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>Feedback from S3/4 Playback - Align to Web Forms</description>
    <errorConditionFormula>AND(
    NOT($Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c),
    ISBLANK(FirstName)
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter the First Name</errorMessage>
</ValidationRule>