Agentforce/force-app/main/default/objects/Lead/validationRules/Last_Name_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Length</fullName>
    <active>true</active>
    <description>AD-27 - validation rule to ensure the lead&apos;s last name does not exceed 80 characters</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
 LEN( LastName ) &gt; 80)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>The lead&apos;s last name should not exceed 80 characters</errorMessage>
</ValidationRule>