Agentforce/force-app/main/default/objects/Lead/validationRules/Lead_Contract_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Contract_Dates</fullName>
    <active>true</active>
    <description>Triggers when Lead Estimated Start &amp; End Date are populated and the End Date is before the Start Date.</description>
    <errorConditionFormula>AND(
   NOT($Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c),
   NOT(ISBLANK(Estimated_Start_Date__c)),
   NOT(ISBLANK(Estimated_End_Date__c)),
   Estimated_End_Date__c &lt; Estimated_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Estimated_End_Date__c</errorDisplayField>
    <errorMessage>Please amend Estimated Start / End Dates - The End Date must be after the Start Date.</errorMessage>
</ValidationRule>