Agentforce/force-app/main/default/objects/Lead/validationRules/Mobile_Phone_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Phone_Values</fullName>
    <active>false</active>
    <description>AD-19 - validation rule to ensure the Mobile Phone is correctly populated</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c, NOT(REGEX(  MobilePhone ,&apos;^(?:[\\d+()]+)?$&apos;))
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter a valid mobile number</errorMessage>
</ValidationRule>