Agentforce/force-app/main/default/objects/Lead/validationRules/Phone_Number_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Values</fullName>
    <active>false</active>
    <description>AD-19 - validation rule to check if the phone number only contains the correct values</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c, NOT(REGEX( Phone,&apos;^(?:[\\d+()]+)?$&apos;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid phone number</errorMessage>
</ValidationRule>