Agentforce/force-app/main/default/objects/Lead/validationRules/Reference_Conversion_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Conversion_Requirements</fullName>
    <active>true</active>
    <description>Reference required to Convert a Lead to Opportunity</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
    IsConverted,
    OR(
        ISBLANK( Reference__c )
    )
)</errorConditionFormula>
    <errorMessage>Reference is required to convert a Lead.</errorMessage>
</ValidationRule>