Agentforce/force-app/main/default/objects/Lead/validationRules/Revisit_Date_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Revisit_Date_Populated</fullName>
    <active>true</active>
    <description>AD-43 - validation rule to ensure the revisit date is populated when moving the stage to Revisit</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
    (ISPICKVAL( Status , &apos;Revisit&apos;)),
    ISBLANK( Revisit_Date__c  )
)</errorConditionFormula>
    <errorDisplayField>Revisit_Date__c</errorDisplayField>
    <errorMessage>A Revisit Date is required</errorMessage>
</ValidationRule>