Agentforce/force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Enquiry_Service__c</columns>
    <columns>Lead_Description__c</columns>
    <columns>Estimated_Start_Date__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Qualified</value>
    </filters>
    <label>All Open Leads</label>
</ListView>