Agentforce/force-app/main/default/objects/Lead/listViews/Automotive_France_Lead_Management_Lead.listView-meta.xml
<ListView>
    <fullName>Automotive_France_Lead_Management_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Automotive - France - Lead Management</label>
    <queue>Automotive_France_Lead_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>