Agentforce/force-app/main/default/objects/Lead/listViews/Automotive_Luxembourg_Lead_Management_Lead1.listView-meta.xml
<ListView>
    <fullName>Automotive_Luxembourg_Lead_Management_Lead1</fullName>
    <filterScope>Queue</filterScope>
    <label>Automotive - Luxembourg Lead Management</label>
    <queue>Automotive_Luxembourg_Lead_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>